Fixed spacing

--- a/src/components/customComponents/titleCard/styles.css
+++ b/src/components/customComponents/titleCard/styles.css
@@ -29,7 +29,7 @@
     transform: scale(1.02);
   }
   100% {
-    transform: scale(1.5);
+    transform: scale(1.55);
   }
 }
 
@@ -40,7 +40,7 @@
   }
   100% {
     height: 80%;
-    width: 70%;
+    width: calc(50% + 250px);
   }
 }
 
